Updating tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -4,12 +4,12 @@ envlist = py38
 [testenv]
 deps =
     pytest
+    black
     python-dotenv
     boto3
     redis
     pyyaml
 commands =
-    flake8
     black src
     pytest
 
